Search ve discountKey butonları düzenlendi

--- a/ECommerce/ECommerce.WEB/Views/Home/_Category.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Home/_Category.cshtml
@@ -315,13 +315,27 @@
         </div>
         <div class="header-bottom">
             <div class="search-bar">
-                @using (Html.BeginForm("Search", "Product",FormMethod.Post))
-                {
-                    <input class="search__input" type="text" name="search" placeholder="Aradığınız ürün, kategori veya markayı yazınız">
-                    <div class="search-icon left "></div>
-                    <input type="submit" class="search-icon" value="Ara"/>
-                }
-
+                <div class="container">
+                    @using (Html.BeginForm("Search", "Product", FormMethod.Post))
+                    {
+                        <section class="search-block">
+                            <div class="container">
+                                <div class="row justify-content-center">
+                                    <div class="col-lg-12">
+                                        <form class="form-header">
+                                            <div class="input-group">
+                                                <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)" name="search" placeholder="Aradığınız ürün, kategori veya markayı yazınız">
+                                                <div class="input-group-append">
+                                                    <button class="btn btn-solid"><i class="fa fa-search"></i>Ara</button>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+                    }
+                </div>
             </div>
         </div>
     </div>
