--- a/ECommerce/ECommerce.WEB/Views/UserCart/_UserCart.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/UserCart/_UserCart.cshtml
@@ -65,7 +65,7 @@
                 <li>
                     <div class="buttons">
                         <a href="@Url.Action("Index","UserCart")" class="btn btn-solid btn-block btn-solid-sm view-cart">Sepetim</a>
-                        <a href="#" class="btn btn-solid btn-solid-sm btn-block checkout">Şiparişi Tamamla</a>
+                        <a href="@Url.Action("CheckOut","Order")" class="btn btn-solid btn-solid-sm btn-block checkout">Şiparişi Tamamla</a>
                     </div>
                 </li>
             </ul>
