Sayfa başlıkları düzenlendi.

--- a/ECommerce/ECommerce.WEB/Views/Address/Insert.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Address/Insert.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ECommerce.WEB.Models.AddressManagament
 @model AddressCRUDModel
 @{
-    ViewBag.Title = "Insert";
+    ViewBag.Title = "Adres Ekleme";
 }
 
 @using (Html.BeginForm("Insert", "Address", FormMethod.Post, new { @id = "InsertAddress" }))
