--- a/ECommerce/ECommerce.WEB/Views/AppUser/UpdateUser.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/AppUser/UpdateUser.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ECommerce.WEB.Models.AppUserManagement.AppUserUpdateView
 
 @{
-    ViewBag.Title = "UpdateUser";
+    ViewBag.Title = "Üyelik Bilgilerim";
 }
 
 
