--- a/ECommerce/ECommerce.WEB/Views/Home/Login.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Home/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ECommerce.WEB.Models.AppUserManagement
 @model AppUserCRUDModel
 @{
-    ViewBag.Title = "Login";
+    ViewBag.Title = "Üye Girişi";
 }
 
 @using (Html.BeginForm("Login", "Home", FormMethod.Post, new { id = "LoginHome" }))
