--- a/ECommerce/ECommerce.WEB/Views/Home/Password.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Home/Password.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ECommerce.WEB.Models.AppUserManagement.AppUserCRUDModel
 @{
-    ViewBag.Title = "Password";
+    ViewBag.Title = "Şifre ";
 }
 
 @using (Html.BeginForm("Password", "Home", FormMethod.Post, new { id = "Password" }))
