--- a/ECommerce/ECommerce.WEB/Views/Home/RePassword.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Home/RePassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ECommerce.WEB.Models.AppUserManagement.AppUserPasswordModel
 @{
-    ViewBag.Title = "RePassword";
+    ViewBag.Title = "Şifre Yenileme";
 }
 
 @using (Html.BeginForm("RePassword", "Home", FormMethod.Post, new { id = "RePasswordAppUser" }))
