--- a/ECommerce/ECommerce.WEB/Views/Order/CheckOut.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Order/CheckOut.cshtml
@@ -3,7 +3,7 @@
 @using ECommerce.CORE.Helper
 @model OrderModel
 @{
-    ViewBag.Title = "CheckOut";
+    ViewBag.Title = "Ödeme";
     decimal totalAmount = 0;
 }
 
