--- a/ECommerce/ECommerce.WEB/Views/UserCart/Index.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/UserCart/Index.cshtml
@@ -2,7 +2,7 @@
 @using ECommerce.CORE.Helper
 @model UserCartModel
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Sepetim";
 
     int totalCount = 0;
     decimal totalAmount = 0;
