--- a/ECommerce/ECommerce.WEB/Views/Wishlist/Index.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Wishlist/Index.cshtml
@@ -2,7 +2,7 @@
 @using ECommerce.CORE.Helper
 @model List<AppUserWishlistModel>
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Favorilerim";
 }
 
 
