--- a/ECommerce/ECommerce.WEB/Views/Address/Index.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Address/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ECommerce.WEB.Models.AddressManagament
 @model List<AddressListView>
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Adreslerim";
 }
 
 @Html.Action("_ProfileInfo", "AppUser")
