--- a/ECommerce/ECommerce.WEB/Views/Product/Search.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Product/Search.cshtml
@@ -2,7 +2,7 @@
 @model List<ProductListViewModel>
 @using ECommerce.CORE.Helper
 @{
-    ViewBag.Title = "Search";
+    ViewBag.Title = "Arama";
 }
 
 
