Kategoride tıklanan ürüne göre ürünler getirildi.

--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/AdminUser/Password.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/AdminUser/Password.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ECommerce.WEB.Areas.Admin.Model.AdminUserManagement.AdminUserCRUDModel
 
 @{
-    ViewBag.Title = "Password";
+    ViewBag.Title = "Şifre";
         Layout = null;
 }
 
@@ -12,7 +12,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Giriş Yap </title>
+    <title>Şifremi Unuttum </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="~/Themes/AdminAssets/images/icon/favicon.ico">
     <link rel="stylesheet" href="~/Themes/AdminAssets/css/bootstrap.min.css">
