--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/Category/Index.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/Category/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ECommerce.WEB.Areas.Admin.Model.CategoryManagement
 @model List<CategoryListView>
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Kategori";
 }
 
 <div class="main-content-inner">
