--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/Product/InsertProductStoreWindow.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/Product/InsertProductStoreWindow.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ECommerce.WEB.Areas.Admin.Model.ProductManagement.ProductStoreWindowCRUDModel
 @{
-    ViewBag.Title = "InsertProductStoreWindow";
+    ViewBag.Title = "Vitrin Ürünü";
 }
 
 
