--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/Product/ProductStoreWindowList.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/Product/ProductStoreWindowList.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ECommerce.WEB.Areas.Admin.Model.ProductManagement
 @model List<ProductStoreWindowListView>
 @{
-    ViewBag.Title = "ProductStoreWindowList";
+    ViewBag.Title = "Ürün Yönetimi";
 }
 
     <div class="main-content-inner">
