--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/Slider/Index.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/Slider/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ECommerce.WEB.Areas.Admin.Model.SliderManagement
 @model List<SliderListView>
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Slider Yönetimi";
 }
 
 <div class="main-content-inner">
