--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/DiscountKey/Insert.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/DiscountKey/Insert.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ECommerce.WEB.Areas.Admin.Model.DiscountKeyManagement
 @model DiscountKeyCRUDModel
 @{
-    ViewBag.Title = "Insert";
+    ViewBag.Title = "Kupon Ekle";
 }
 
 
