--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/DiscountKey/Update.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/DiscountKey/Update.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ECommerce.WEB.Areas.Admin.Model.DiscountKeyManagement
 @model DiscountKeyCRUDModel
 @{
-    ViewBag.Title = "Update";
+    ViewBag.Title = "Kupon Güncelleme";
 }
 
 
