--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/Product/UpdateProductStoreWindow.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/Product/UpdateProductStoreWindow.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ECommerce.WEB.Areas.Admin.Model.ProductManagement.ProductStoreWindowCRUDModel
 @{
-    ViewBag.Title = "UpdateProductStoreWindow";
+    ViewBag.Title = "Vitrin Ürünü Güncelleme";
 }
 
 
