Order History yapıldı.

--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/Product/ProductStoreWindowList.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/Product/ProductStoreWindowList.cshtml
@@ -21,6 +21,7 @@
                                     <tr>
                                         <td>Resim</td>
                                         <td>Kategori adı</td>
+                                        <td>Tarih</td>
                                         <td>Güncelle</td>
                                         <td>Sil</td>
                                     </tr>
