--- a/ECommerce/ECommerce.WEB/Views/AppUser/_MenuInfo.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/AppUser/_MenuInfo.cshtml
@@ -10,7 +10,7 @@
     <ul>
         <li class="active"><a href="@Url.Action("UpdateUser","AppUser", new { id=appUser.AppUserId})">Kullanıcı Bilgilerim</a></li>
         <li><a href="@Url.Action("Index","Address")">Adres Bilgilerim</a></li>
-        <li><a href="#">Siparişlerim</a></li>
+        <li><a href="@Url.Action("OrderHistory","Order")">Siparişlerim</a></li>
         <li><a href="#">Beğendiklerim</a></li>
         <li><a href="#">İndirim Kuponlarım</a></li>
         <li><a href="#">Kayıtlı Kredi Kartlarım</a></li>
