--- a/ECommerce/ECommerce.WEB/Views/UserCart/Index.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/UserCart/Index.cshtml
@@ -33,8 +33,8 @@
 <section class="cart-section section-b-space">
     <div class="container">
         <div class="row">
-            <div class="col-sm-auto">
-                <table class="table cart-table table-responsive-xs striped-table">
+            <div class="col-sm-12">
+                <table class="table cart-table table-responsive-xs">
                     <thead>
                         <tr class="table-head">
                             <th scope="col">RESİM</th>
@@ -80,16 +80,14 @@
                                     }
                                 </td>
                                 <td>
-                                    <div class="qty-box">
-                                        <div class="input-group ">
-                                            <span class="input-group-prepend form-control">
-                                                <a href="@Url.Action("Decrease","UserCart",new {userCartId=userCart.UserCartId })" class="btn quantity-left-minus"><i class="ti-angle-left"></i></a>
-                                            </span>
-                                            <span class="form-control">@userCart.ProductCount</span>
-                                            <span class="input-group-prepend form-control">
-                                                <a href="@Url.Action("Increase","UserCart",new {userCartId=userCart.UserCartId})" class="btn quantity-right-plus"><i class="ti-angle-right"></i></a>
-                                            </span>
-                                        </div>
+                                    <div class="input-group ">
+                                        <span class="input-group-prepend form-control">
+                                            <a href="@Url.Action("Decrease","UserCart",new {userCartId=userCart.UserCartId })" class="btn quantity-left-minus"><i class="ti-angle-left"></i></a>
+                                        </span>
+                                        <span class="form-control">@userCart.ProductCount</span>
+                                        <span class="input-group-prepend form-control">
+                                            <a href="@Url.Action("Increase","UserCart",new {userCartId=userCart.UserCartId})" class="btn quantity-right-plus"><i class="ti-angle-right"></i></a>
+                                        </span>
                                     </div>
                                 <td><a href="@Url.Action("Delete","UserCart",new {userCartId=userCart.UserCartId})" class="icon"><i class="ti-close"></i></a></td>
                                 <td>
