--- a/ECommerce/ECommerce.WEB/Views/Product/_Product.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Product/_Product.cshtml
@@ -113,7 +113,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- Quick-view modal popup end-->}
+                            <!-- Quick-view modal popup end-->
+                        }
                     </div>
 
                 </div>
