--- a/ECommerce/ECommerce.WEB/Views/UserCart/Index.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/UserCart/Index.cshtml
@@ -148,7 +148,7 @@
         <br />
         <br />
         <div class="row cart-buttons">
-            <div class="col-6"><a href="@Url.Action("IndexProductStoreWindow","Product")" class="btn btn-solid">ALışverişe Devam et</a></div>
+            <div class="col-6"><a href="@Url.Action("Index","Product")" class="btn btn-solid">ALışverişe Devam et</a></div>
             <div class="col-6"><a href="@Url.Action("CheckOut","Order")" class="btn btn-solid">Siparişi Tamamla</a></div>
         </div>
     </div>
