--- a/ECommerce/ECommerce.WEB/Views/Wishlist/Index.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Wishlist/Index.cshtml
@@ -18,7 +18,7 @@
             <div class="col-12">
                 <nav aria-label="breadcrumb" class="theme-breadcrumb">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="@Url.Action("IndexProductStoreWindow","Product")">Anasayfa</a></li>
+                        <li class="breadcrumb-item"><a href="@Url.Action("Index","Product")">Anasayfa</a></li>
                         <li class="breadcrumb-item active" aria-current="page">FAVORİLERİM</li>
                     </ol>
                 </nav>
@@ -92,7 +92,7 @@
             </div>
         </div>
         <div class="row cart-buttons">
-            <div class="col-6"><a href="@Url.Action("IndexProductStoreWindow","Product")" class="btn btn-solid">ALIŞVERİŞE Devam Et</a></div>
+            <div class="col-6"><a href="@Url.Action("Index","Product")" class="btn btn-solid">ALIŞVERİŞE Devam Et</a></div>
             <div class="col-6"><a href="#" class="btn btn-solid">Sepete Git</a></div>
         </div>
     </div>
